feat: add statuspage module

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,11 @@ SUPABASE_SERVICE_ROLE_KEY=
 
 # Get your key at https://platform.openai.com/account/api-keys
 OPENAI_KEY=
+
+
+# Your Project
+PROJECT_NAME=
+
+# Statuspage config
+STATUSPAGE_PAGE_ID=
+STATUSPAGE_API_KEY=
