--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "github-slugger": "^2.0.0",
+    "got": "^13.0.0",
     "gpt3-tokenizer": "^1.1.5",
     "lucide-react": "^0.128.0",
     "mdast": "^3.0.0",
@@ -48,6 +49,7 @@
     "openai-edge": "^1.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "readmeio": "^6.2.0",
     "tailwind-merge": "^1.10.0",
     "tailwindcss-animate": "^1.0.5",
     "typescript": "^4.9.5",
