--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "18.0.30",
     "@types/react-dom": "18.0.11",
     "ai": "^2.1.3",
+    "axios": "^1.5.1",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
@@ -35,7 +36,6 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "github-slugger": "^2.0.0",
-    "got": "^13.0.0",
     "gpt3-tokenizer": "^1.1.5",
     "lucide-react": "^0.128.0",
     "mdast": "^3.0.0",
